       - SaxRepresentation wasn't writing the wrapped SAX sources. Added
         logic to write(XmlWriter) method. Reported by Raif S. Naffah.
       - Fixed potential NPE in Adapter#getLogger() method.
         Reported by Avi Flax.
       - Removed unused namespaces declaration in RDF/n3 and Turtle writers.
       - Removed extra empty line generated by XmlWriter at the top of docs.
    
    - 2.0.9 (2011-08-20)
    - Bugs fixed
       - Fixed severe log messages produced by the Component class due to 
         lack of child context usage.
       - Fixed potential IO issue by adding missing calls to flush() 
         methods in Writer and OutputStream. Reported by Jeroen Goubert,
         Konstantin Pelykh.
       - Fixed potential NPE in Velocity's TemplateRepresentation.
         Reported by David Hamilton
       - Fixed bug failing to properly clear the service filters of a
         Component when stopped. Reported by Jean-Pascal Boignard.
       - Fixed parsing issue with invalid HTTP Basic credentials, when
         length of Base 64 value isn't a multiple of 4. 
         Contributed by Ray Waldin.
       - Fixed conversion of representations to instances of primitive 
         type using the default converter.
       - Fixed handling of binary data in OData extension.
         Reported by Nikhil Purushe.
       - Fixed a bug in the default converter that lead the latter to 
         take precedence over specialized converter when converting 
         incoming representations. Reported by Glenn Bruns.
       - Fixed potential NPE in the GWT edition. Reported by Cyril Lakesh.
       - Added warning message when an unexpected error happen during the 
         invocation of an asynchronous callback.

- 2.0.8 (2011-06-21)
    - Bugs fixed
       - AbstractJaxbProvider, JaxbRepresentation and JibxRepresentation 
         used TreeMap which required Comparable implementation and isn't
         synchronized. Replaced with ConcurrentHashMap. 