@@ -46,6 +46,7 @@ Import-Package: com.db4o,
  com.sun.syndication.feed.synd.impl,
  com.sun.syndication.io,
  com.sun.syndication.io.impl,
+ com.thoughtworks.xstream.annotations,
  freemarker.template,
  javax.ws.rs,
  javax.ws.rs.core,
