@@ -13,6 +13,9 @@ Changes log
          Reported by Avi Flax.
        - Removed unused namespaces declaration in RDF/n3 and Turtle writers.
        - Removed extra empty line generated by XmlWriter at the top of docs.
+       - Lowered level of log messages in the internal connector when a 
+         connection is broken from warning to fine as it could be the result
+         of a simple SHIFT+F5 browser reload.
     
     - 2.0.9 (2011-08-20)
     - Bugs fixed
